fix: 350+ tags overflows issues

--- a/src/Components/pages/WorkOuts/WorkOuts.css
+++ b/src/Components/pages/WorkOuts/WorkOuts.css
@@ -4,7 +4,7 @@
 .img{
     position: absolute;
     top: 230px;
-    right: 150px;
+    right: 300px;
 }
 
 .toptag{
